# yolo-tflite-android

./: .gitattributes  .gitignore  LICENSE  README.md  README_zh.md  aot_compile.py  gradle.properties  gradlew  gradlew.bat  local.properties.template  settings.gradle.kts  setup-isolated-env-aria2.ps1  setup-isolated-env-surge.ps1  setup-isolated-env.sh
app/: build.gradle.kts  device_targeting_configuration.xml
app/src/androidTest/java/com/little_star/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/little_star/: MainActivity.kt  MainApplication.kt
app/src/main/java/com/little_star/assets/: LocalModelManager.kt  ModelRepository.kt  RemoteModelManager.kt  TaskModelScanner.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/little_star/: ExampleUnitTest.kt
detector/: .gitignore  build.gradle.kts
detector/src/main/cpp/: CMakeLists.txt  IPostprocessor.h  LetterboxUtils.h  LiteRtDetector.cpp  LiteRtDetector.h  LiteRtJni.cpp  LiteRtJni.h  NmsUtils.h  PostprocessorFactory.cpp  PostprocessorFactory.h  YoloClsPostprocessor.cpp  YoloClsPostprocessor.h  YoloDetPostprocessor.cpp  YoloDetPostprocessor.h  YoloKptPostprocessor.cpp  YoloKptPostprocessor.h  YoloObbPostprocessor.cpp  YoloObbPostprocessor.h  YoloSegPostprocessor.cpp  YoloSegPostprocessor.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
litert_npu_runtime_libraries/: fetch_qualcomm_library.ps1  fetch_qualcomm_library.sh
(+81 files in other folders)
